--- a/notebooks/robust.ipynb
+++ b/notebooks/robust.ipynb
@@ -560,6 +560,46 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "# Monte Carlo Simulation for Tolerance Stack Up Analysis\n",
+            "import numpy as np\n",
+            "import pandas as pd\n",
+            "from io import StringIO\n",
+            "\n",
+            "def get_dfX(path_x):\n",
+            "    try:\n",
+            "        df_X = pd.read_csv(path_x)\n",
+            "        df_X['max'] = df_X['nominal'] + df_X['upper_tol']\n",
+            "        df_X['min'] = df_X['nominal'] + df_X['lower_tol']\n",
+            "        df_X['mean'] = (df_X['max'] + df_X['min']) / 2\n",
+            "        df_X['std'] = (df_X['max'] - df_X['min']) / 2 / df_X['sigma_level']\n",
+            "        return df_X\n",
+            "    except:\n",
+            "        print(\"Cannot get the parameters for X\")\n",
+            "        return None\n",
+            "\n",
+            "def mc_tol(df_X, transf, N_SIM):\n",
+            "    df = pd.DataFrame()\n",
+            "    for i in range(df_X.shape[0]):\n",
+            "        df[df_X['name'][i]] = np.random.normal(df_X['mean'][i], df_X['std'][i], N_SIM)\n",
+            "    df = df.eval(transf)\n",
+            "    return df\n"
+          ]
+        }
+      ],
+      "source": [
+        "with open(\"Tol_MC.py\") as f: # The with keyword automatically closes the file when you are done\n",
+        "    print(f.read())"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 6,
       "metadata": {},
       "outputs": [
@@ -791,6 +831,7 @@
         }
       ],
       "source": [
+        "#Compare simulated \n",
         "0.005*np.sqrt(2)/4/df.G.std()"
       ]
     },
@@ -5649,7 +5690,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
